--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/code.css">
-    <!--<script data-main="js/app" src="js/external/require.js"></script>-->
+    <script data-main="js/app" src="js/external/require.js"></script>
 </head>
 <body>
 <h1 style='text-align:center'>Fuck you Imateamcape</h1>
-<!--<div class="container-fluid" id="container">
+<div class="container-fluid" id="container">
     <div class="col-lg-3 col-md-5 col-sm-4 col-xs-4" id="output-container"
          style="display:none;">
         <div class="panel panel-default">
@@ -32,6 +32,6 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="map-container">
         <div id="map"></div>
     </div>
-</div>-->
+</div>
 </body>
 </html>
