Adding missing files from previous commit

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                       <option>Array</option>
                       <option>List</option>
                       <option>Arrays.asList</option>
+					  <option>Raw</option>
                   </select>
             </div>
             <div class="panel-body">
