Adding RSPeer support

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <option>OSBot</option>
                     <option>TRiBot</option>
                     <option>DreamBot</option>
+                    <option>RSPeer</option>
                 </select>
             </div>
             <div class="panel-body">
