Adding QuantumBot support

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <option>TRiBot</option>
                     <option>DreamBot</option>
                     <option>RSPeer</option>
+                    <option>QuantumBot</option>
                 </select>
             </div>
             <div class="panel-body">
