Add "Dax Path Spacing" field to allow user to specify tile spacing

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <option>Arrays.asList</option>
                     <option>Raw</option>
                 </select>
+                <br/>
                 <select class="form-control" id="bot-api">
                     <option>OSBot</option>
                     <option>TRiBot</option>
@@ -78,6 +79,11 @@
                     <option>QuantumBot</option>
                     <option>RuneMate</option>
                 </select>
+                <br/>
+                <div class="form-group">
+                    <label for="dax-spacing">Dax Path spacing</label>
+                    <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
+                </div>
             </div>
             <div class="panel-body">
                 <pre><code id="code-output" contenteditable="true"></code></pre>
