Fix code scrolling

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
                 </div>
             </div>
-            <div class="panel-body">
-                <pre><code id="code-output" contenteditable="true"></code></pre>
+            <div class="panel-body" id="code-output-panel">
+                <pre id="code-output-pre"><code id="code-output" contenteditable="true"></code></pre>
             </div>
         </div>
     </div>
