--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111933116-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'UA-111933116-1');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-111933116-1');
     </script>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 
     <title>Explv's Map</title>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css"/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css" integrity="sha256-/PVkO2+mUlKqE6wgKVXU5Wh4mx3vncHAxLEdpXrziGo=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css" integrity="sha256-/PVkO2+mUlKqE6wgKVXU5Wh4mx3vncHAxLEdpXrziGo="
+        crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -36,21 +38,21 @@
     </script>
 
     <!-- Get Bootstrap JS from Bootstrap CDN, or fallback to local copy -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <script>
         window.jQuery.fn.modal || document.write('<script type="text/javascript" src="js/external/bootstrap.min.js\"><\/script>');
     </script>
 
     <!-- Get Leaflet JS from CDNJS, or fallback to local copy -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js"
-            integrity="sha256-kdEnCVOWosn3TNsGslxB8ffuKdrZoGQdIdPwh7W1CsE=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js" integrity="sha256-kdEnCVOWosn3TNsGslxB8ffuKdrZoGQdIdPwh7W1CsE="
+        crossorigin="anonymous"></script>
     <script>
         window.L || document.write('<script type="text/javascript" src="js/external/leaflet.js\"><\/script>');
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.js" integrity="sha256-u74zWXS2T+G4E4NsM/R8gR8SaTJcq5a0TCks5m+AN9k=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.js" integrity="sha256-u74zWXS2T+G4E4NsM/R8gR8SaTJcq5a0TCks5m+AN9k="
+        crossorigin="anonymous"></script>
 
     <!-- Try to load main JS module -->
     <script type="module" src="js/map.js"></script>
@@ -58,41 +60,54 @@
     <!-- If the browser does not support ES6 modules, load the bundled version -->
     <script nomodule defer src="js/bundle.js"></script>
 </head>
+
 <body>
-<div class="container-fluid" id="container">
-    <div class="col-lg-3 col-md-5 col-sm-4 col-xs-4" id="output-container"
-         style="display:none;">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <select class="form-control" id="output-type">
-                    <option>Array</option>
-                    <option>List</option>
-                    <option>Arrays.asList</option>
-                    <option>Raw</option>
-                </select>
-                <br/>
-                <select class="form-control" id="bot-api">
-                    <option>OSBot</option>
-                    <option>TRiBot</option>
-                    <option>DreamBot</option>
-                    <option>RSPeer</option>
-                    <option>QuantumBot</option>
-                    <option>RuneMate</option>
-                </select>
-                <br/>
-                <div class="form-group">
-                    <label for="dax-spacing">Dax Path spacing</label>
-                    <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
+    <div class="container-fluid" id="container">
+        <div class="col-lg-3 col-md-5 col-sm-4 col-xs-4" id="output-container" style="display:none;">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-lg-6" for="output-type">Output type</label>
+                            <div class="col-lg-5">
+                                <select class="form-control" id="output-type">
+                                    <option>Array</option>
+                                    <option>List</option>
+                                    <option>Arrays.asList</option>
+                                    <option>Raw</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-lg-6" for="bot-api">Bot type</label>
+                            <div class="col-lg-5">
+                                <select class="form-control" id="bot-api">
+                                    <option>OSBot</option>
+                                    <option>TRiBot</option>
+                                    <option>DreamBot</option>
+                                    <option>RSPeer</option>
+                                    <option>QuantumBot</option>
+                                    <option>RuneMate</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-lg-6" for="dax-spacing">Dax Path spacing</label>
+                            <div class="col-lg-5">
+                                <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-body" id="code-output-panel">
+                    <button id="copy-to-clipboard" title="Copy to clipboard"><i class="fa fa-copy"></i></button>
+                    <pre id="code-output-pre"><code id="code-output" contenteditable="true"></code></pre>
                 </div>
             </div>
-            <div class="panel-body" id="code-output-panel">
-                <pre id="code-output-pre"><code id="code-output" contenteditable="true"></code></pre>
-            </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="map-container">
+            <div id="map"></div>
         </div>
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="map-container">
-        <div id="map"></div>
-    </div>
-</div>
 </body>
 </html>
