--- a/index.html
+++ b/index.html
@@ -63,50 +63,45 @@
 
 <body>
     <div class="container-fluid" id="container">
-        <div class="col-lg-3 col-md-5 col-sm-4 col-xs-4" id="output-container" style="display:none;">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label class="control-label col-lg-6" for="output-type">Output type</label>
-                            <div class="col-lg-5">
-                                <select class="form-control" id="output-type">
-                                    <option>Array</option>
-                                    <option>List</option>
-                                    <option>Arrays.asList</option>
-                                    <option>Raw</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-lg-6" for="bot-api">Bot type</label>
-                            <div class="col-lg-5">
-                                <select class="form-control" id="bot-api">
-                                    <option>OSBot</option>
-                                    <option>TRiBot</option>
-                                    <option>DreamBot</option>
-                                    <option>RSPeer</option>
-                                    <option>QuantumBot</option>
-                                    <option>RuneMate</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-lg-6" for="dax-spacing">Dax Path spacing</label>
-                            <div class="col-lg-5">
-                                <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="panel-body" id="code-output-panel">
-                    <button id="copy-to-clipboard" title="Copy to clipboard"><i class="fa fa-copy"></i></button>
-                    <pre id="code-output-pre"><code id="code-output" contenteditable="true"></code></pre>
-                </div>
-            </div>
-        </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="map-container">
             <div id="map"></div>
+        </div>
+        <div class="slide-panel" id="code-output-panel">
+            <pre id="code-output-pre"><code id="code-output" contenteditable="true"></code></pre>
+        </div>
+        <div class="slide-panel" id="settings-panel">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="control-label col-lg-6" for="output-type">Output type</label>
+                    <div class="col-lg-5">
+                        <select class="form-control" id="output-type">
+                            <option>Array</option>
+                            <option>List</option>
+                            <option>Arrays.asList</option>
+                            <option>Raw</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-6" for="bot-api">Bot type</label>
+                    <div class="col-lg-5">
+                        <select class="form-control" id="bot-api">
+                            <option>OSBot</option>
+                            <option>TRiBot</option>
+                            <option>DreamBot</option>
+                            <option>RSPeer</option>
+                            <option>QuantumBot</option>
+                            <option>RuneMate</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-6" for="dax-spacing">Dax Path spacing</label>
+                    <div class="col-lg-5">
+                        <input id="dax-spacing" class="form-control" type="number" min="0" value="0">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </body>
