--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                             <option>QuantumBot</option>
                             <option>RuneMate</option>
                             <option>RuneLite</option>
+                            <option>PowBot</option>
                         </select>
                     </div>
                 </div>
